# zpacecode-brain

./: .env.example  .gitignore  Makefile  main.py  pyproject.toml
src/agent/: __init__.py  base.py
src/agent/tools/: __init__.py  exec_bash_cmd.py  get_fetch_tool.py  get_output_chunk.py  run_subagent.py
src/api/: __init__.py
src/memory/: __init__.py
src/settings/: __init__.py
src/tools/: __init__.py
src/utils/: __init__.py
